# VarTracker

./: CMakeLists.txt  build.sh  main.cpp
examples/: 1.cpp  2.cpp  3.cpp
examples/1_non_optimal/: graph  graph.dot  main.cpp
examples/2_l_refs/: CMakeLists.txt  graph.dot  main.cpp  run.sh
examples/2_l_refs_contr/: CMakeLists.txt  graph.dot  main.cpp
examples/2_refs/: main.cpp  run.sh
examples/3_r_refs/: graph.dot
examples/3_r_refs_contr/: main.cpp  run.sh
examples/4_RVO_contr/: CMakeLists.txt  graph.dot  main.cpp
examples/4_copy_ellision/: CMakeLists.txt  graph.dot  main.cpp
inc/: edge.hpp  graph_builder.hpp  graphvizer.hpp  node.hpp  tracking.hpp
src/: graphvizer.cpp  node.cpp
